--- a/mirrorui/stylus/coms/sidemenu.styl
+++ b/mirrorui/stylus/coms/sidemenu.styl
@@ -2,9 +2,9 @@
 
 // 主题色变量
 .sidemenu
-    --t-sidemenu-hover-bg-color:$gray['2']// hover菜单项背景色
+    --t-sidemenu-hover-bg-color:$gray['4']// hover菜单项背景色
     --t-sidemenu-active-color:$white['1']// 菜单项选中字色
-    --t-sidemenu-active-bg-color:$gray['6']// 菜单项选中背景色
+    --t-sidemenu-active-bg-color:$gray['7']// 菜单项选中背景色
 
 .sidemenu
     @extend $ext-display-block
@@ -73,7 +73,16 @@
         margin: 4px 0 4px 2em
         border-bottom: 1px dashed $border-color
 
+// dark主题
 {$theme-dark} .sidemenu
     --t-sidemenu-hover-bg-color:$gray['6']// hover菜单项背景色
     --t-sidemenu-active-color:$black['1']// 菜单项选中字色
     --t-sidemenu-active-bg-color:$gray['2']// 菜单项选中背景色
+
+// 彩色主题
+if $theme-name-colors-dict is defined
+    for k,v in $theme-name-colors-dict
+        .sidemenu.{k}
+            --t-sidemenu-hover-bg-color:v['4']// hover菜单项背景色
+            --t-sidemenu-active-color:v['1']// 菜单项选中字色
+            --t-sidemenu-active-bg-color:v['5']// 菜单项选中背景色
