表格斑马线样式修正,开关图标风格调小

--- a/mirrorui/mirrorui.css
+++ b/mirrorui/mirrorui.css
@@ -1473,7 +1473,7 @@ p {
 .table.border td {
   border: 1px solid var(--border-color);
 }
-.table.striped tr:nth-child(even) :not(th) {
+.table.striped tr:nth-child(even):not(th) {
   background-color: var(--t-table-striped-color);
 }
 .table.hover tr:hover :not(th) {
@@ -1486,6 +1486,70 @@ p {
 .theme-dark .table {
   --t-table-hover-color: #4b5563;
   --t-table-striped-color: #374151;
+}
+.table.red {
+  --t-table-hover-color: #fca5a5;
+  --t-table-striped-color: #fecaca;
+}
+.theme-dark .table.red {
+  --t-table-hover-color: #b91c1c;
+  --t-table-striped-color: #dc2626;
+}
+.table.orange {
+  --t-table-hover-color: #fdba74;
+  --t-table-striped-color: #fed7aa;
+}
+.theme-dark .table.orange {
+  --t-table-hover-color: #c2410c;
+  --t-table-striped-color: #ea580c;
+}
+.table.yellow {
+  --t-table-hover-color: #fde047;
+  --t-table-striped-color: #fef08a;
+}
+.theme-dark .table.yellow {
+  --t-table-hover-color: #a16207;
+  --t-table-striped-color: #ca8a04;
+}
+.table.green {
+  --t-table-hover-color: #86efac;
+  --t-table-striped-color: #bbf7d0;
+}
+.theme-dark .table.green {
+  --t-table-hover-color: #15803d;
+  --t-table-striped-color: #16a34a;
+}
+.table.sky {
+  --t-table-hover-color: #7dd3fc;
+  --t-table-striped-color: #bae6fd;
+}
+.theme-dark .table.sky {
+  --t-table-hover-color: #0369a1;
+  --t-table-striped-color: #0284c7;
+}
+.table.blue {
+  --t-table-hover-color: #93c5fd;
+  --t-table-striped-color: #bfdbfe;
+}
+.theme-dark .table.blue {
+  --t-table-hover-color: #1d4ed8;
+  --t-table-striped-color: #2563eb;
+}
+.table.purple {
+  --t-table-hover-color: #d8b4fe;
+  --t-table-striped-color: #e9d5ff;
+}
+.theme-dark .table.purple {
+  --t-table-hover-color: #7e22ce;
+  --t-table-striped-color: #9333ea;
+}
+.table.pink {
+  --t-table-hover-color: #f9a8d4;
+  --t-table-striped-color: #fbcfe8;
+}
+.theme-dark .table.pink {
+  --t-table-hover-color: #be185d;
+  --t-table-striped-color: #db2777;
 }
 .input-text,
 .select,
@@ -2065,8 +2129,8 @@ p {
   background-color: var(--t-switch-checked-bg-color);
 }
 .switch.notag:before {
-  width: 1.5em;
-  height: 1.5em;
+  width: 1.2em;
+  height: 1.2em;
   background-color: var(--t-switch-tag-color);
 }
 .switch.checked.notag:before {
