--- a/mirrorui/stylus/coms/datepick.styl
+++ b/mirrorui/stylus/coms/datepick.styl
@@ -245,7 +245,7 @@ $date-col-width = 40px
         width: 100vw
 
 // 
-{$theme-dark} .date-box
+{$themePre}-dark .date-box
     --t-date-hover:$gray['6']// hover背景
     --t-date-opened-bg-color:$gray['7']//打开了选框的按钮
     --t-date-selected:$gray['6']// 选中的按钮
