--- a/mirrorui/stylus/coms/docmenu.styl
+++ b/mirrorui/stylus/coms/docmenu.styl
@@ -66,6 +66,6 @@
     &-group-close *:not(:first-child)
         @extend $ext-display-none
 
-{$theme-dark} .docmenu
+{$themePre}-dark .docmenu
     --t-docmenu-active-color:$white['1']// 菜单项选中字色
     --t-docmenu-active-bg-color:$gray['6']// 菜单项选中背景色
