--- a/mirrorui/stylus/coms/formcheck.styl
+++ b/mirrorui/stylus/coms/formcheck.styl
@@ -56,7 +56,7 @@
     border-color: var(--t-check-checked-color)
 
 // dark主题
-{$theme-dark} .input-check
+{$themePre}-dark .input-check
     --t-check-checked-color:$gray['2']// 选中的钩和圆点颜色
     
 // 彩色主题
