--- a/mirrorui/stylus/coms/forminput.styl
+++ b/mirrorui/stylus/coms/forminput.styl
@@ -43,6 +43,6 @@
     outline: 2px solid var(--t-form-bd-color)
 
 // dark主题
-{$theme-dark} .select
+{$themePre}-dark .select
     --t-form-select-bg-color: $black['1']// select背景色
 // 彩色主题
