--- a/mirrorui/stylus/coms/list.styl
+++ b/mirrorui/stylus/coms/list.styl
@@ -63,7 +63,7 @@
         content: counter(li-item,cjk-ideographic) '.'
 
 // dark主题
-{$theme-dark} .list
+{$themePre}-dark .list
     --t-list-style-color:$gray['4']// 图案颜色
     
 // 彩色主题
