--- a/mirrorui/stylus/coms/mdirbar.styl
+++ b/mirrorui/stylus/coms/mdirbar.styl
@@ -24,5 +24,5 @@
 .mdirbar .back:active
     border-color: var(--t-mdirbar-back-active)
 
-{$theme-dark} .mdirbar
+{$themePre}-dark .mdirbar
     --t-mdirbar-back-active:$gray['6']// 回退按钮点击色
