--- a/mirrorui/stylus/coms/onoff.styl
+++ b/mirrorui/stylus/coms/onoff.styl
@@ -31,10 +31,10 @@
 .switch.checked.notag:before
     background-color:$white['0']
 
-{$theme-dark} .switch
+{$themePre}-dark .switch
     --t-switch-checked-bg-color:$gray['6']// 选中(开)背景色
     
-// 彩色主题
+// 彩色主题,不要支持全局主题
 for k,v in $theme-name-colors-dict
     .switch.{k}
         --t-switch-checked-bg-color:v['6']// 选中(开)背景色
