--- a/mirrorui/stylus/coms/pagenum.styl
+++ b/mirrorui/stylus/coms/pagenum.styl
@@ -27,7 +27,7 @@
     &-input:focus
         outline: none
 
-{$theme-dark} .pagenum
+{$themePre}-dark .pagenum
     --t-pagenum-active-bg-color:$gray['5']// 当前页背景色
     --t-pagenum-hover:$gray['4']// hover背景色
 
