--- a/mirrorui/stylus/coms/range.styl
+++ b/mirrorui/stylus/coms/range.styl
@@ -33,7 +33,7 @@
         width: 20px
         text-align: center
 
-{$theme-dark} .range-box
+{$themePre}-dark .range-box
     --t-range-btn-bg-color:$gray['3']// 滑块背景色
     --t-range-bar-bg-color:$gray['6']// 滑条已划过背景色
     
