--- a/mirrorui/stylus/exts/menubar.styl
+++ b/mirrorui/stylus/exts/menubar.styl
@@ -34,5 +34,5 @@
     &:active .arr
         border-color: var(--t-menubar-arr-active)
 
-{$theme-dark} .menubar
+{$themePre}-dark .menubar
     --t-menubar-arr-active:$gray['6']// 菜单点击时右箭头色
