--- a/mirrorui/stylus/theme.styl
+++ b/mirrorui/stylus/theme.styl
@@ -1,33 +1,32 @@
 ﻿//=================================================================
 // 颜色主题分为黑白和彩色
 // 黑白使用黑白灰三色,浅色 + 深色(反色)是全局主题,所有元素和控件都要实现
-// 彩色8种 red orange yellow green sky blue purple pink
+// 在html或者body元素上使用全局样式类:<html class="theme-dark">
 //=================================================================
+// 彩色8种 red orange yellow green sky blue purple pink
 // 控件各自实现彩色主题,只是背景字体改变的,不再做主题样式,用工具样式完成.
 // 控件在各自样式类范围定义css变量,在主题类下修改变量值,以实现彩色主题.
 // 变量命名: --t-{控件样式类}-[{控件部位元素类}]-{规则} : 值
-// 暗色模式下的彩色
-// 彩色也支持暗色主题,彩色值要反转调整.500深度的值,在浅色和暗色模式下,
-// 观感区别不大,使用其它深度值时,需要适当调整
+//=================================================================
+// 全局彩色主题
+// 部分控件实现:表格/侧边菜单/缓存导航页
 //=================================================================
 
-//====================================
-// 在主题样式类下,修改css变量值实现主题
-//====================================
-
-//============
+//========================
 // light(默认)
-//============
+// 对字体和背景的全局设定
+//========================
 body
     color: $front-color
     background-color: $back-color
 
-//============
-// theme-dark
-//============
-$theme-dark='.theme-dark'
-// 深色,颠倒黑白,对字体和背景的全局设定,在html标记上添加样式类
-{$theme-dark}
+// 主题样式名前缀,用大括号引用: {$themePre}
+$themePre='.theme'
+
+//========================
+// dark(暗色),颠倒黑白
+//========================
+{$themePre}-dark
     color-scheme: dark// 这个规则将滚动条颜色设为深色
     --back-color: $black['1']// 背景色
     --front-color: $white['1']// 前景(字体)色
@@ -59,12 +58,10 @@ $theme-name-colors-dict={
 // 主题色变量
 .control
     --t-xx-xx:val
-
-{$theme-dark} .btn
-    --t-xx-xx:val:$gray['4']
     
 // 彩色主题
-for k,v in $theme-name-colors-dict
-    .xx.{k}
-        --t-xx-xx:val:v['5']
+if $theme-name-colors-dict is defined
+    for k,v in $theme-name-colors-dict
+        .xx.{k},{$themePre}-{k} .xx
+            --t-xx-xx:val:v['5']
 */
