--- a/mirrorui/stylus/coms/tabs.styl
+++ b/mirrorui/stylus/coms/tabs.styl
@@ -101,7 +101,7 @@
         @extend $ext-display-block
 
 // dark主题
-.theme-dark .tabs
+{$themePre}-dark .tabs
     --t-tabs-label-hover: $gray['7']// 标签hover色
     --t-tabs-label-active-bg-color: $gray['6']// 标签选中背景色
     --t-tabs-label-active-color: $white['1']// 标签选中文字色
