--- a/mirrorui/stylus/coms/btn.styl
+++ b/mirrorui/stylus/coms/btn.styl
@@ -85,9 +85,9 @@
         border-right-color: transparent
     // 按钮组首尾加圆角,
     & > .btn:first-child
-        border-radius: $cir-angle 0 0 $cir-angle
+        border-radius: $cirAngle-dict['3'] 0 0 $cirAngle-dict['3']
     & > .btn:last-child
-        border-radius: 0 $cir-angle $cir-angle 0
+        border-radius: 0 $cirAngle-dict['3'] $cirAngle-dict['3'] 0
 // 下拉式按钮组
 .btn-list
     // 外框
