--- a/mirrorui/stylus/exts/kvpair.styl
+++ b/mirrorui/stylus/exts/kvpair.styl
@@ -6,9 +6,9 @@
     // 边框和补白
     .key
         border-right:1px solid $border-color
-        border-radius:$cir-angle 0 0 $cir-angle
+        border-radius:$cirAngle-dict['3'] 0 0 $cirAngle-dict['3']
     .val
-        border-radius:0 $cir-angle $cir-angle 0
+        border-radius:0 $cirAngle-dict['3'] $cirAngle-dict['3'] 0
     .key,.val
         padding: 2px .5em
     // 圆角
