--- a/mirrorui/stylus/variables/color.styl
+++ b/mirrorui/stylus/variables/color.styl
@@ -119,13 +119,11 @@ $pink={
     '9': #831843
 }
 
-// 色卡字典
-$colors-dict={
-    white:$white
-    black:$black
-    gray:$gray,
-    red:$red,orange:$orange,yellow:$yellow,green:$green,
-    sky:$sky,blue:$blue,purple:$purple,pink:$pink
+// 黑白灰颜色字典
+$blackwhitegray-dict={
+    black:$black,
+    white:$white,
+    gray:$gray
 }
 
 // 用于主题色的全局css变量的引用
