--- a/mirrorui/stylus/function/extendclass.styl
+++ b/mirrorui/stylus/function/extendclass.styl
@@ -1,5 +1,6 @@
 ﻿// 扩展样式,其它元素会使用的相同的css样式,避免重复,使用扩展
 // 引用语法: @extend $ext-text-overflow ,使用后,相当于写下了这个样式下的所有css条目
+// 基本上每个扩展样式是一个css条目,这个借鉴了tailwindcss的原子化做法
 //=======
 // 文本
 //=======
@@ -119,7 +120,7 @@ $ext-border-1px
     border: 1px solid $border-color
 // @extend $ext-border-cir-default
 $ext-border-cir-default
-    border-radius: $cir-angle
+    border-radius: $cirAngle-dict['3']
 // @extend $ext-border-circle
 $ext-border-circle
     border-radius: 50%
@@ -172,3 +173,17 @@ $ext-overflow-y-hidden
     overflow-y:hidden
 $ext-overflow-y-auto
     overflow-y:auto
+
+//============
+// color
+//============
+// @extend $ext-color-inherit
+$ext-color-inherit
+    color: inherit
+
+//================
+// underline-none
+//================
+// @extend $ext-text-decoration-none
+$ext-text-decoration-none
+    text-decoration: none
