--- a/mirrorui/stylus/variables/cirangle.styl
+++ b/mirrorui/stylus/variables/cirangle.styl
@@ -1,2 +1,11 @@
-﻿// 圆角弧度
-$cir-angle = 4px
+﻿// 常用圆角弧度
+$cirAngle-dict = {
+    cir-3: 3px,
+    cir-5: 5px,
+    cir10: 10%,
+    cir16: 16.6%,
+    cir20: 20%,
+    cir25: 25%,
+    cir33: 33.3%,
+    cir: 50%
+}
