--- a/mirrorui/stylus/index.styl
+++ b/mirrorui/stylus/index.styl
@@ -1,4 +1,8 @@
-﻿// =================================
+﻿// ============================
+// mirror ui,包含了所有的组件
+// ============================
+
+// =================================
 // 变量,函数和扩展样式的定义.必须引用
 // =================================
 // 变量
@@ -12,9 +16,7 @@
 // 函数
 @import "function/function"
 
-// ==============
-// mirror ui组件
-// ==============
+//
 // 1.reset css和全局样式
 @import "base"
 // 2主题
