--- a/mirrorui/mirrorui.css
+++ b/mirrorui/mirrorui.css
@@ -371,6 +371,7 @@ h5,
 h6 {
   color: inherit;
 }
+a,
 .tabsbox-tabclose,
 .sidemenu-item:not(.active):hover {
   text-decoration: none;
@@ -391,7 +392,17 @@ body {
   padding: 0;
   font-size: 1.4rem;
   font-family: 'Microsoft YaHei', -apple-system, BlinkMacSystemFont, sans-serif, '\5B8B\4F53';
-  line-height: 1.5;
+  line-height: 1.3;
+}
+@media only screen and (min-width: 1024px) {
+  body {
+    line-height: 1.5;
+  }
+}
+p {
+  margin: 0;
+  padding: 0;
+  line-height: 1.8;
 }
 body {
   color: var(--front-color);
@@ -863,9 +874,6 @@ h5 {
 }
 h6 {
   font-size: 1.4rem;
-}
-p {
-  margin: 0 0 1em;
 }
 .label {
   padding: 2px 0.5em;
