--- a/mirrorui/stylus/base.styl
+++ b/mirrorui/stylus/base.styl
@@ -19,8 +19,19 @@ body
     padding:0
     font-size: 1.4rem
     font-family: 'Microsoft YaHei', -apple-system, BlinkMacSystemFont, sans-serif, '\5B8B\4F53'
-    line-height: 1.5
+    line-height: 1.3
 
+// PC页面行距高一些
+@media only screen and (min-width: $screen-bigtablet)
+    body
+        line-height: 1.5
 // a链接
 a
     @extend $ext-color-inherit
+    @extend $ext-text-decoration-none
+
+// p
+p
+    margin:0
+    padding:0
+    line-height:1.8
