--- a/mirrorui/stylus/coms/toolsText.styl
+++ b/mirrorui/stylus/coms/toolsText.styl
@@ -7,9 +7,10 @@ for k, v in $fontSize-dict
     .text-{k}
         font-size: v
 // 文本加粗
-for k,v in $fontWeight
-    .text-b-{k}
-        font-weight: v
+for size in range(100,900,100)
+    n=size / 100
+    .text-b-{n}
+        font-weight: size
 // 文本段落首行缩进2em
 .text-in
     text-indent: 2em
