--- a/mirrorui/stylus/variables/color.styl
+++ b/mirrorui/stylus/variables/color.styl
@@ -125,7 +125,17 @@ $blackwhitegray-dict={
     white:$white,
     gray:$gray
 }
-
+// 彩色字典
+$colors-dict={
+    red:$red,
+    orange:$orange,
+    yellow:$yellow,
+    green:$green,
+    sky:$sky,
+    blue:$blue,
+    purple:$purple,
+    pink:$pink
+}
 // 用于主题色的全局css变量的引用
 $front-color=var(--front-color)
 $back-color=var(--back-color)
